feat: add player dump route

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"@elysiajs/bearer": "^1.1.2",
 		"@elysiajs/cors": "^1.1.1",
 		"@elysiajs/swagger": "^1.1.5",
+		"@sentry/bun": "^8.34.0",
 		"@supabase/supabase-js": "^2.45.4",
+		"@upstash/redis": "^1.34.3",
 		"elysia": "latest",
 		"steamapi": "^3.0.12"
 	},
